syntax = "proto3";

option go_package = "./pb";

package gserver;

// 服务器信息
message ServerInfo {
  int32 serverId = 1; // 服务器id
  string serverType = 2; // 服务器类型
  string serverListenAddr = 3; // 监听服务器地址
  string clientListenAddr = 4; // 监听客户端地址
  string gateListenAddr = 5; // 监听网关地址
  int64 lastActiveTime = 6; // 最近上传信息的时间戳(毫秒)
}

// 踢玩家下线req
message KickPlayerReq {
  int64 accountId = 1; // 账号id
  int64 playerId = 2; // 玩家id
}

// 踢玩家下线res
message KickPlayerRes {
  string error = 1;
  int64 accountId = 2; // 账号id
  int64 playerId = 3; // 玩家id
}

// 客户端掉线
message ClientDisconnect {
  uint32 clientConnId = 1;
}

// 服务器连接上其他服务器时,发的初始化信息
message ServerHello {
  int32 serverId = 1; // 服务器id
  string serverType = 2; // 服务器类型
}
